# Computer-Vision-Learning-Lab

./: README.md  pyproject.toml
notebook/: 02yolo-parameters.md
notebook/OpenCV/: 01basic_operation.md  02threshold_and_blur.md
src/OpenCV/01base_operation/: main.ipynb
src/OpenCV/01basic_operation/: main.ipynb
src/Yolo/01demo/: main.py
src/Yolo/02yolo-parameters/: main.py
src/Yolo/03result/: main.py
